--- a/article/sg0/doc/0159.md
+++ b/article/sg0/doc/0159.md
@@ -1,286 +1,110 @@
 # 无限远点的牵牛星 - 07
 > 1.129954  
-> [ 2011/07/07 铃羽视角 ] 铃羽收到了未来另一世界线桶子的视频，表示她和真由理一起又发现了一条通往命运石之门的道路，给她们发布「*Operation·Arclight*（织女星）」。这时真由理被武装部队挟持，铃羽只能暂时听从他们的要求。  
+> [ 2011/07/07 铃羽视角 ] 铃羽收到了未来另一世界线桶子的视频，表示她和真由理一起又发现了一条通往命运石之门的道路，准备给她们讲解「*Operation·Arclight*（织女星）」。这时真由理被武装部队挟持，铃羽只能暂时听从他们的要求。  
 
 | [←prev](./0158) | [menu](../) | [next→](./0160) |
 
 ---
 
-“铃羽按下了手机收到的视频邮件的播放按钮。”  
-“画面经过相当大比率的压缩而显得模糊。在这样的画面中，那个人出现了。”  
-“对于铃羽来说，这是一直都看过的面孔，现在也在身边的面孔，同时也是非常想念的面孔。”  
-“在年幼的时候经常抱着铃羽的那个人，在影像中大概在 35 岁左右吧。”  
-“呀，铃羽。你还好吗？是爸爸哦。这里是 2025 年。”  
-“把各种各样的事情都托付给你，真是对不起。请你原谅我。”  
-“你已经收到了这封视频邮件就说明……你，不，你和真由喜又发现了一条通往命运石之门的道路了吧。”  
-“总之计划将进入下一个阶段。”  
-“你说不定有生过气，为什么在最初开始时没有把所有的指示都告诉你。”  
-“但是，不是不告诉你。是我没能告诉你。”  
-“在你出发的世界线的我，并没有现在这个的作战计划。”  
-“也许你已经意识到了——因为你和真由理的选择，世界线又变动了一点。”  
-“也就是说，我和你出发那条线上的桥田至不同，是另一条世界线的桥田至了。”  
-“但是，铃羽，你不要搞错了。不管在哪条世界线上，我都是最爱女儿的。”  
-“哈哈。顺便问一下，比较一下如何呢，和你的那个爸爸比起来那个更帅啊。”  
-“我最近开始锻炼肌肉了……哼哼？”  
-“桶子，不要说无聊的事了，赶紧说作战计划的内容！”  
-“真是的，反正你也是三分钟热度，不要做这些无关紧要的报告！”  
-“可以录像的时间快要结束了喵！”  
-“哎呀，别样催我嘛。”  
-“总之，接下来说明这封视频邮件本来的目的。”  
-“「*Operation·Arclight*（织女星）」的详细内容。”  
-“这是连一瞬间的错误也不允许的，极限的战斗，用心的听好了？”  
-“于是铃羽暂时停止了视频。”  
-“既然说“用心听”的话，就必须要有相当的心里的准备。为了能完美地记下作战内容，转换现在轻飘飘的心情是有必要的。”  
-“说实话，从 2025 年的父亲那里收到视频邮件，铃羽相当的兴奋。”  
-“像是自己独立去完成的事情，得到了父亲的认同般感觉。”  
-“正因为如此，才必须要认真。”  
+铃羽打开了手机收到的视频邮件，按下了播放键。视频画面经过相当大比率的压缩而显得模糊。在这样的画面中，那个人出现了。对铃羽来说，那是平时都会看见的面孔，现在也在身边的面孔，同时也是非常想念的面孔。年幼时经常抱着铃羽的那个人，在视频中大概 35 岁左右。  
+“呀，铃羽，你还好吗？是爸爸哦，这里是 2025 年。  
+ 把各种各样的事情都托付给你，真是对不起，请你原谅我。  
+ 既然你收到了这封视频邮件，就说明……  
+ 你，不，**你和真由喜又发现了一条通往命运石之门的道路**。  
+ 这代表，计划将进入下一阶段。  
+ 你或许会生气，我为什么不在最初就把所有的指示都告诉你。  
+ 但是，不是不告诉你，是没办法告诉你。  
+ 因为，你出发的世界线的我，并没有制定现在这个作战计划。  
+ 或许你已经意识到了——**因为你和真由喜的选择，世界线又变动了一点**。  
+ 也就是说，我和你出发的那条世界线上的桥田至不同，是**另一条世界线的桥田至**。  
+ 不过，铃羽，你不要多想，不管在哪条世界线上，我都是最爱女儿的。  
+ 哈哈，顺便问，相比之下，你觉得哪个爸爸更帅啊？  
+ 其实我最近开始锻炼肌肉了……哼哼？”  
+“桶子！不要说无聊的事了，赶紧讲作战计划的内容！”  
+“真是的，反正你也就三分钟热度，不要做这些无关紧要的报告！”  
+“录像的时长快要到了喵！”  
+其他熟悉又陌生的声音从视频中传出，那是冈伦、真帆和菲莉丝。  
+“好啦好啦，别催我嘛。  
+ 言归正传，接下来说明这封视频邮件的原本目的——  
+ 「*Operation·Arclight*（织女星）」的详细内容。  
+ 这是连一瞬间的失误也不允许的，极限的作战。  
+ 要用心听好，知道了吗？”  
+于是铃羽暂停了视频。既然要“用心听好”，就必须要做好心理准备。为了能完美地记下作战内容，现在有必要转换掉现在轻飘飘的心情。老实说，收到来自 2025 年的父亲的视频邮件，铃羽相当兴奋。那种感觉，是自己独立决定要做的事情，得到了父亲的认同。正因如此，她必须要绷紧神经。  
 
 ![](../static/image/0159-1.png)
 
-“真由理一个人伫立着，拼命地在手机上打进什么。”  
-“在收到视频邮件的时候，就向真由理说明了可能由于不测的事态，今天就要向过去出发。”  
-“今天——这一天，这一刻——收到有视频的短信这件事，一定是有意义的。”  
-“铃羽有着这样的感觉。”  
-“你在做什么？”  
-“啊，铃小姐。怎样？今天可以出发吗？”  
-“我打算先确认一下作战概要。”  
-“是吗……”  
-“嗯，如果今天出发了的话，真由喜是不是就要下落不明了？”  
-“因为不想让他们担心，所以我想给爸爸妈妈，还有朋友和大家预先写一封邮件。”  
-“能有直接传达给冈伦叔叔的时间就好了。”  
-“在太阳下山之前，应该就能完成作战内容的确认并且决定如何行动吧。”  
+真由理一个人伫立在一旁，一个劲儿地在手机上输入什么。收到视频邮件的时候，铃羽就向真由理说明了，可能由于预料之外的事态，今天就要出发回到过去。今天——这一天，这一刻——收到视频邮件这件事，一定是有意义的，铃羽有着这样的感觉。  
+“你在做什么呢？”  
+“啊，铃小姐，怎么样？今天可以出发吗？”  
+“我正在准备确认作战内容。”  
+“这样啊……那个，如果今天出发了的话，真由喜是不是就要下落不明了？  
+ 因为不想让他们担心，所以我想给爸爸妈妈，还有朋友们预先写一封邮件。”  
+“要是还有时间能亲口告诉冈伦叔叔他们就好了。”  
+在太阳下山之前，应该就能确认完作战内容，并决定如何行动。  
 “也给冈伦写了邮件了，没问题的。”  
 “邮件就可以了吗？”  
 “……嗯。”  
-“真由理，害羞地，重重地点了头。”  
-“在她的眼中已经没有泪水，不过，淡粉色的脸颊上，泪水滴下的痕迹依然清晰。”  
-“……总觉得……很难为情呢。”  
-“但是，难得写了的邮件，能不能发过去也不一定，现在有点为难呢。”  
+真由理，腼腆地，重重地点了点头。她的眼中已经没有泪水，不过，淡粉色的脸颊上，泪痕依然清晰。  
+“……总感觉……很难为情呢。  
+ 不过呢，难得写了邮件，能不能发过去也不一定，现在有点为难呢。”  
 “为什么？”  
-“信号……显示在不在服务区啊，是地点不好吗？”  
+“没信号……显示不在服务区啊，是地点不好吗？”  
 “不在服务区……？”  
-“铃羽看了看真由理手机显示的画面。”  
-“信号状况指示，一条都没有。”  
-“真奇怪。在这个地方的话，平常都有信号啊。”  
-“铃羽马上将自己的手机也确认了一下。”  
+铃羽看了看真由理手机显示的画面。信号状况指示，一格都没有。  
+“真奇怪，这个地方平常都有信号的啊。”  
+铃羽立刻也掏出自己的手机确认。  
 “我的也是。”  
-“铃羽在确认了自己和真由理的手机信号状况一样后，瞬间绷紧了面孔。”  
-“……有不好的预感。”  
-“真由理照着铃羽的指示隐藏在了时间机器的背后，铃羽一边隐藏起脚步声，一边跑向通往楼下的铁门前。”  
-“尽可能的小心不发出摩擦的声音，同时把铁门开启了一个拳头宽的缝隙。”  
-“听了一下馆内的气息，和平常没有丝毫变化，寂静无声。”  
-“下面的楼层，只有一些活动空间和仓库等，再像今天这样的普通日子里，这样的安静的是常有的。”  
-“……是我的错觉吗？”  
-“铃羽感到很纳闷，同时轻轻地想关上铁门——”  
-“啊啊啊啊——!。”  
+铃羽和真由理是不同的手机运营商，却同样没有信号，瞬间绷紧了面孔。  
+“……有一种不好的预感。”  
+铃羽让真由理先躲在时间机器背后，自己放轻脚步，跑到通往楼下的铁门前。尽可能不发出摩擦声的同时，把铁门拉开了一个拳头宽的缝隙。楼内的气息，和平常没有丝毫变化，寂静无声。下面的楼层，只有一些活动房间和仓库等，再像今天这样的普通日子里，一般都是这么安静。  
+（……是我的错觉吗？）  
+“铃羽很纳闷，同时轻轻地准备关上铁门——  
+“啊啊啊啊——!”  
 
 ![](../static/image/0159-2.png)
 
-“听到真由理的悲鸣后赶紧回头，穿着迷彩服的特工的身影接二连三地越过屋顶的栅栏。”  
-“真由理，被其中的一个抓住了。”  
-“是从外面的墙壁爬上来的吗？”  
-“铃羽对自己的失误非常的后悔。”  
-“对于墙上的入侵应该要充分警戒才是。”  
-“但是，收到父亲的电子邮件后，心情不知不觉就放松了。”  
-“装备着自动步枪的穿着迷彩服的男人们，约 30 名。”  
-“真由理被劫做人质，铃羽无法动弹。”  
-“就那样放下枪趴在地上。手放在头上。”  
-“男人中的一个，冷淡地向铃羽命令道。”  
-“抵抗的话，这个女人的生命就无法保证。”  
-“将真由理的手别在背后的男人，把顶在她后脑勺的枪的保险打开，以威慑铃羽。”  
-“可恶！”  
-“只有服从。铃羽把从枪套中拔出手枪，放在地上，趴了下来。手放在头后面，采取无抵抗的姿势。”  
-“铃羽……”  
-“不要说话。这些家伙，一旦认真起来真的会杀了姐姐你的。”  
-“……啊。”  
+铃羽听到真由理的悲鸣，赶紧回头，看到穿着迷彩服的武装团体接二连三地越过楼顶的栅栏。真由理被其中的一个挟持了。  
+（是从外面的墙壁爬上来的？！）  
+铃羽对自己的失误非常后悔。对于外墙方向的入侵应该要充分警戒才是，可是因为收到父亲的视频邮件，心情不知不觉就放松了。对面一共有大约 30 个男人，都穿着迷彩战斗服，装备着手枪和自动步枪。  
+“放下枪，趴在地上，双手放在头后面。”  
+其中一个男人应该是队长，冷漠地命令铃羽放弃抵抗。
+“抵抗的话，我无法保证这个女人的生命。”  
+挟持真由理的男人站在她的背后，一只手别住真由理的双手，另一只手打开手枪的保险，抵在真由理的太阳穴。  
+“可恶！” 
+真由理被当作人质，铃羽只能服从，按照对方的要求，摆出无抵抗的姿势。  
+“铃小姐……！”  
+“不要说话，这些家伙，要是动真格的，真的会杀了姐姐的。”  
+“啊……！”  
 “我不会有事的。”  
-“单是看这个迷彩服集团的行动，就能轻易地想像得到，他们是实战的专家。”  
-“这样的话，想必他们的目标就是时间机器，并且已经掌握情报证明铃羽是唯一能够操作它的人的了吧。”  
-“因此，铃羽判断自己是不会轻易被杀的。”  
-“最初命令铃羽的那个队长似的男人，从旁边用膝盖顶着铃羽，毫无顾忌地对铃羽进行搜身。”  
-“啊……我姑且也是一个女人。给我稍微小心点。”  
-“隐藏着的用来以防万一的另一把小型手枪，还有几把小刀也都被夺走了。”  
-“目标 2 和目标 3 确保。”  
-“你那边呢？”  
-“那个队长向在时间机器的周围聚集的数人呼唤道。”  
-“目标 1 确保！被锁上了，一切都在报错！”  
-“好像有数人进入了机器中。”  
-“虽说舱门一直开着是铃羽的失误，她对机器内部被鞋子踩踏也感到不悦。”  
-“做什么都没用的，那东西，不是我的话是不会听的。”  
+光看这个武装团体的行动，就能轻易想到，他们是实战的专家。想必他们的目标就是时间机器，并且已经掌握情报，知晓铃羽是唯一能够操作它的人吧。因此，铃羽判断自己是不会轻易被杀的。那个队长走到铃羽身边，蹲下用一侧膝盖压住她的后背，双手毫无顾忌地对她进行搜身。
+“喂……我姑且也是女性，稍微注意点啊。”  
+身上藏的用来以防万一的另一把小型手枪，还有几把小刀，都被搜走了。  
+“目标 2 和目标 3 确保。那边呢？”  
+队长向围在时间机器周围的几个部下问道。  
+“目标 1 确保！应该上了锁，操作全都显示错误！”  
+看来有几个人进入了机器里面。舱门一直开着是铃羽的失误，她对机器内部被脏兮兮的鞋子踩踏感到不悦。  
+“别白费力气了，那东西只听我的话。”  
 “……站起来。”  
-“队长，用鞋子的前头轻轻地踢了铃羽的侧腹。”  
-“手就保持那样，慢慢地起来。如果有稍微一点多余的动作，就立刻会把人质杀掉。”  
-“按照所说的那样站了起来，铃羽手被手铐靠在了后面。”  
-“后背就那样被顶着，硬带到了机器的旁边。”  
+队长用鞋尖轻轻踢了一下铃羽的侧腹。  
+“双手就保持那样，慢慢地站起来。稍有一点多余的动作，就立刻杀掉人质。”  
+铃羽按他说的站了起来。队长把她的双手扳到背后用手铐铐住，然后用枪顶着她的后背，把她带到了时间机器旁边。  
 “……是生物认证啊。”  
-“是的。”  
-“但是即使拷贝我的静脉和指纹也是没用的。”  
-“哪怕是砍下手，或是挖掉眼睛，也是不能认证的。”  
-“2036 年的系统才没有这么愚蠢呢。”  
-“铃羽说明的这件事，穿着迷彩服的家伙们似乎都知道了。”  
-“没有丝毫的动摇和焦躁。”  
+“是的。不过，即使复制我的指静脉和指纹也是没用的。  
+ 砍下来的手，或者挖掉的眼睛，也是不能认证的。  
+ 2036 年的系统，才没有那么愚蠢。”  
+他们似乎已经掌握了铃羽所说的情报，没有丝毫的动摇和焦躁。  
 “『教授』怎么样了？”  
-“队长，向那个用枪指着真由理的部下问道。”  
+队长向那个挟持真由理的部下问道。  
 “现在正在赶往这边。”  
-“……“目标 1”和“目标 2”是捆绑的，不做洗脑是不行的。”  
-“听到洗脑这个词，铃羽咬牙切齿起来。”  
-“曾经，『瓦尔基里』的许多伙伴们都被非人道的进行了洗脑，强迫他们作为间谍潜入，最终都变成了废人，铃羽就看过了很多。”  
-“面对那个队长，铃羽转过身来。”  
-“洗脑会怎样，你应该是知道的。教授不会使用药物，而是直接鼓捣大脑。”  
-“在那之前，坦率地和我们合作才是比较聪明不是吗？”  
+“目标 1 和目标 2 是绑定的，不洗脑的话是没法使用。”  
+听到洗脑这个词，铃羽咬牙切齿。曾经，铃羽看过许多『瓦尔基里』的伙伴们，遭受了非人道的洗脑，强迫他们作为间谍潜入，最终都变成了废人。  
+队长转向铃羽：  
+“洗脑之后会变成什么样，你应该是知道的。『教授』不会使用药物，而是直接鼓捣大脑。  
+ 变成那样之前，坦率和我们合作才是聪明的选择吧？”  
 “『教授』……吗？”  
-“在未来也有被这么称呼的老年的博士，率领着以毁灭『瓦尔基里』为目标的洗脑小组。对于铃羽来说，是最不能原谅的人。”  
-“而且，不使用药物的做法也是一样的。”  
-“现在与未来的两个『教授』，是同一个人是不会错的。”  
+在未来，也有一个以此为代号的老年博士，以毁灭『瓦尔基里』为目标，率领着一支洗脑团队。而且，不使用药物的做法也是一样的。对于铃羽而言，他是最不能原谅的敌人。看来，现在与未来的两个『教授』，毫无疑问就是同一个人。  
 “……我明白了。”  
-“铃羽老实地点了头。”  
-
-
-“我会听从的。但是，这样子是不行的。”  
-“铃羽，像是故意似地用背后面手铐发出叮叮当当的声音。”  
-“解开手铐。但是，如果抵抗的话，那女人就会死。”  
-“如今，那枪仍然顶着真由理头。”  
-“就算抵抗，在这么多专业的对手下，救助真由理是不可能的。”  
-“双手自由了的铃羽，进入驾驶舱，使用了生物认证解除了锁定，开始操作控制台。”  
-“突然，机器各处的亮起，类似轰鸣的声音开始发出。”  
-“好，下去。之后由我们来调查。”  
-“……我倒是不认为你们能够理解。”  
-“铃羽走出了驾驶舱，队长，向着像是与刚才战斗班不同的，技术班的人，使了个眼色。”  
-“——铃羽等的就是这个瞬间。”  
-“从驾驶舱出来时，随意地触摸了控制台的下面。”  
-“在那里，有刀藏着。”  
-“没有声音。”  
-“铃羽用刀，以那个队长为目标扔去。”  
-“啊！”  
-“那刀的刀尖刺进了队长的喉咙，他在发出悲鸣后立刻倒下。”  
-“铃羽快速地架起了另一把刀，在身穿迷彩服的男人间穿梭起来。”  
-“目标是持枪威胁真由理的男人。”  
-“低下腰身的瞬间，从背后向颈部切了过去。”  
-“喷出的血，洒在了呆然的真由理的背上，不过，没有担心的功夫了。”  
-“捡起男人掉落的自动步枪，就这样贴着腰胡乱射击牵制的同时，牵着真由理的手向机器的背后滚去。”  
-“……咕！”  
-“到那里，都顺利地进行了。但是铃羽失算了，对方是比她预测的还要高上几个等级的训练有素的部队。”  
-“有个疑是二把手的马上站在了前面，接着进行指挥。”  
-“铃羽手上的，只有夺来的枪和一把刀。”  
-“还必须要保护非战斗人员的真由理。”  
-“敌人还有 25 人以上。”  
-“要怎么打破局面，铃羽找不到答案。”  
-“不管怎么说，现在，时间机器也正在运作着。不能把它丢弃在这里，自己逃出去。”  
-“用自动步枪进行的威胁射击，打到铃羽藏身的机器上弹了开来。”  
-“啊——”  
-“真由理的身体像是被打中了一样猛地震了一下。”  
-“头的一边，突然飞溅出血。”  
-“真由姐。”  
-“呃……啊……”  
-“真由理可爱的脸上，染上了鲜血。”  
-“应该是被跳弹擦伤了。”  
-“空虚的表情，紧紧地抱着自己。”  
-“那纤细的身体正在瑟瑟发抖。”  
-“被卷入到这样的事态，会有那样的反应也是没办法的。”  
-“铃羽也持枪应战，牵制着缩小包围圈的敌人。”  
-“走过了各种战场……被逼到这个程度还是第一次啊……”  
-“眼前是时间机器维修用的升降口。”  
-“确认了之后，铃羽在头脑中模拟了最后的手段。”  
-“如果打开那个的话……就能从内部爆破时间机器……”  
-“但是如果实行的话，所有的计划都会付诸东流。”  
-“通向命运石之门的道路，将被永远封闭。”  
-“但是，让真由理牺牲在这里的冷酷，铃羽是没有的。”  
-“站在世界线的收束的角度看，真由理是不会死在这里的。”  
-“但是，刚才收到的视频邮件中，父亲所说的话令铃羽在意。”  
-“也许你已经意识到了——因为你和真由理的选择，世界线又有点变动了。”  
-“也就是说，我和你出发那条世界线上的桥田至不同，是另一条世界线的桥田至了。”  
-“因此，铃羽不能确定真由理一定能活到 2036 年。”  
-“——世界线真的改变了吗？”  
-“当然，为了「*Operation·Arclight*（织女星）」，铃羽希望它改变。”  
-“但是这样的话，铃羽现在就寸步难移。”  
-“（——还是预想最坏的结果吧）。”  
-“最糟糕的事态，那就是，时间机器被这些穿着迷彩服的家伙夺走。”  
-“那样的话，甚至有可能会朝着比铃羽所知更为可怕的世界线变动。”  
-“可能变为不要说真由理，就连至的生存都没办法保证的世界线。”  
-“如果会是那样的话——”  
-“迅速地做了判断。”  
-“铃羽，一边观察着敌人的情况，一边用生物认证打开了维护用的舱口。”  
-“看见了发出低沉声音的引擎的一部分。用枪向那里瞄准。”  
-“幸好，生成克尔黑洞的部分还没有启动。这样的话，就算让机器爆炸，也不会对时间空间造成严重的影响。”  
-“铃羽确认过后，就要扣动扳机——”  
-“不，不行。”  
-“真由理拼命地制止。”  
-“不能破坏它。”  
-“不要阻止！我已经决定了！”  
-“铃小姐！”  
-“被真由理制止了。”  
-“铃羽也在一瞬间犹豫了。”  
-“但在战场上，一瞬间就能决定命运。”  
-“铃羽急忙确认周围的情况。”  
-“在那里，意料之外的出现了。”  
-
-“混在重重包围的迷彩服的男人中，不知何时出现的，穿着暗色的骑手服，戴着头盔打扮的女人伫立着。”  
-“啊、那家伙！？篝……！？”  
-“泄漏这个地方的，果然是篝？”  
-“篝的战斗能力，在两次邂逅中已经有把握了。”  
-“只有半吊子的觉悟的话，会马上被杀掉的。”  
-“铃羽对自己说道。”  
-“看来我不得不放弃活下来的想法了……”  
-“要拖几个人一起死，为真由理逃跑创造机会吗？”  
-“现在只有考虑让真由理回到冈部伦太郎那里的方法了。”  
-“于是，在正要开始盘算的时候——”  
-“铃羽感觉到了正在看着自己——不，是看见真由理额上滴血的篝的视线。”  
-“然后，紧接着。”  
-“篝她做出了一个预想之外的行动。”  
-“……你们对妈妈……做了什么……？”  
-“你们这些家伙，对妈妈做了什么啊啊啊啊啊啊啊！！”  
-“尖叫——”  
-“不，那种的话，应该算是野兽的咆哮了。”  
-“……唔！？”  
-“然后，就是杀戮，正确来说是开始虐杀。”  
-“篝左手抓住副队长的头，右手架着自动步枪，就这样将他的脸打得粉碎。”  
-“那变形了的头被拽下来后扔到地上四处转动。”  
-“……咦！？”  
-“干什么！？你在做什么！？”  
-“篝把副领队的头拍在地上变成碎片后，以迅雷不及掩耳之势，冲向了那群胆怯的迷彩服队员当中。”  
-“然后，在近距离固执地依次用步枪一通乱射。”  
-“你们对妈妈做了什么！？你们对妈妈做了什么！？你们对妈妈做了什么啊啊啊啊啊啊啊！”  
-“不论对方是否已经倒在血泊，篝都将他们击得粉碎，四肢飞散，那些家伙连人形都没有了。”  
-“为了自保而向篝射击的人自然也有，但是无论子弹打到了哪里，篝都丝毫没有畏惧，更不要说停止杀戮。”  
-“用光了自动步枪的弹匣，这次双持巨大的军刀，并配合上体术，将视野内的对手挨个屠杀。”  
-“这时，傍晚的楼顶上到处都是那帮队员的脏器，篝自身也被血肉染了个遍。”  
-“……唔。”  
-“不要看！把耳朵堵上！”  
-“铃羽将真由理抱了过来并用胸前挡住了她的脸。”  
-“因为太恐怖而瑟瑟发抖并紧抱着她的真由理，按照铃羽的话，用手堵上了耳朵。”  
-“就算这样，人肉撕裂的声音，骨头碎裂的声音，依旧可以传达到鼓膜。”  
-“（这种……简直已经不是人类了……！）。”  
-“连铃羽都不禁呻吟道。”  
-“自己身处战场的时候，像这样单方面的屠杀是从来没有遭遇过的。”  
-“之前铃羽和篝战斗的时候就亲身体会到，她根本感受不到正常人感受的恐惧和疼痛，只是在考虑着如何葬送对方罢了。”  
-“人类，为了保护自己的肉体，是会时刻限制肌肉的使用量的。”  
-“但是，篝像是缺失了这一功能一样。”  
-“刚刚，篝用军刀刺向一名背对着她逃跑的队员 ，仅用一只手就将那庞大的身躯击倒在地，进而用脚猛踢腹部使内脏破裂，将他虐杀致死。”  
-“包，包，包围射击！那家伙只有一个人啊！”  
-“去右边，右边！”  
-“不知到底有几人，不，几十人化作肉块——剩下的数人好容易才回过神来，想与大部队取得联系，悲鸣声此起彼伏。”  
-“篝那恐怖的反射神经，在他们射击的间隙，又将数人化为尸骨。”  
-“但是——”  
-“咕……！”  
-“终于，弹雨打到了篝的左手，她手上的军刀被弹飞到地上。”  
-“不，不是这样。”  
-“被打飞的不只是刀子……篝的左手也被打飞了。”  
-“这下冲击，使篝的身体剧烈地摇晃了一下。”  
-“就，就是现在，射击！”  
-“不知是谁，用毫无身为军人的骄傲与勇猛的声音，嘶喊道。”  
-“然后开始一起连射，篝的身体又中了几发子弹。”  
-“骑手紧身衣裂开了几个大口，头盔也有了裂缝。这时开始，篝身上的血已经不再是被杀者的了，而明显是她自身喷涌而出的鲜血。”  
-“最终，这位杀戮者倒在了尸体堆成的山中。”  
-“漂亮！”  
-“肯定想着终于干掉她了吧。”  
-“存活下来的迷彩服队员中的一个，用枪口对准了篝，正要扣下扳机——”  
-“咕啊啊啊啊啊啊啊啊啊啊！”  
-“哇啊啊啊啊啊啊啊！”  
-“篝野兽般的咆哮与男人恐怖的尖叫这两个不和谐音重叠在了一起。”  
-“她以倒下的姿势强行地跳了起来，那男人持枪的手腕被篝用刀背猛地敲断并击飞至老远。”  
-“即刻，男人的咽喉已经被军刀切开并丧命。”  
-“撤，撤，撤退，撤退啊！”  
-“残存的几名男子开始恐慌的逃命。”  
+铃羽老实地点了点头。  
 
 
 <br/>
