统一用词：骑手服 巫女服

--- a/article/sg0/doc/0041.md
+++ b/article/sg0/doc/0041.md
@@ -90,7 +90,7 @@
 “还没，不过对方好像知道咱们这里。”  
 “所、所以说，这到底怎么回事啊？”  
 “那家伙……在监视 LAB。”  
-半年前在广播馆楼顶上，那个穿着黑色骑手装窥视时间机器，被她发现追赶却逃之夭夭的人，绝对就是篝。那之后，铃羽一直更加谨慎地看管时间机器，附近再也没有发现篝的痕迹——铃羽完全没想到，篝居然在监视 LAB。  
+半年前在广播馆楼顶上，那个穿着黑色骑手服窥视时间机器，被她发现追赶却逃之夭夭的人，绝对就是篝。那之后，铃羽一直更加谨慎地看管时间机器，附近再也没有发现篝的痕迹——铃羽完全没想到，篝居然在监视 LAB。  
 “不，稍微思考一下也理所当然。  
  那家伙，想阻止我们到达命运石之门。  
  她不想把这个世界变成没有发生过。  
@@ -135,11 +135,11 @@
 “如果你耍花招，我就开枪。双手放在头后，慢慢走出来。”  
 铃羽沉着嗓子威吓，不过对方没有表现出丝毫动摇，缓慢地将全身暴露在铃羽的视线里。  
 “哼，大热天的，亏你能穿成那样呢，至少把头盔摘掉如何？”  
-对方和当时一样，穿着黑色骑手装，头盔也没变。完美贴合身体曲线的皮革，勾勒出凹凸有致的黄金比例身段，毫无疑问是位女性。  
+对方和当时一样，穿着黑色骑手服，头盔也没变。完美贴合身体曲线的皮革，勾勒出凹凸有致的黄金比例身段，毫无疑问是位女性。  
 “你要找的东西不在那里哦，在我外套的口袋里。”  
-铃羽指向淋浴间的入口，之前脱下的衣服凌乱地堆在那里。好像被抓住了弱点，穿黑色骑手装的女人把脸转向那边。但由于头盔的遮挡，并不能看见她的表情。  
+铃羽指向淋浴间的入口，之前脱下的衣服凌乱地堆在那里。好像被抓住了弱点，穿黑色骑手服的女人把脸转向那边。但由于头盔的遮挡，并不能看见她的表情。  
 “呐，弄丢了可不好哦，这可是妈妈送给你的珍贵之物吧？**篝**。”  
-话音刚落，穿黑色骑手装的女人——椎名篝率先采取了行动。她拔出藏在腰后面的那把经过消光处理的军用匕首，撞向铃羽怀里。铃羽避开要害，朝她的腿部扣动了扳机。伴随 .32 口径发出的轻快的枪声，篝失去平衡跌向地面——然而这完全是假动作。篝假装失去平衡，绕过铃羽向淋浴间冲了过去，看来她想要先发制人夺取目标物品。  
+话音刚落，穿黑色骑手服的女人——椎名篝率先采取了行动。她拔出藏在腰后面的那把经过消光处理的军用匕首，撞向铃羽怀里。铃羽避开要害，朝她的腿部扣动了扳机。伴随 .32 口径发出的轻快的枪声，篝失去平衡跌向地面——然而这完全是假动作。篝假装失去平衡，绕过铃羽向淋浴间冲了过去，看来她想要先发制人夺取目标物品。  
 “这是！？”  
 开枪后，铃羽立刻察觉到，即使是 .32 口径，后坐力也不会这么小。她又开了一枪，果然对篝的动作毫无影响。  
 （空包弹！？怎么回事！？）  
