--- a/article/sg0/doc/0064.md
+++ b/article/sg0/doc/0064.md
@@ -61,7 +61,7 @@
 
 “哦呀，琉华，有客人吗？”  
 “啊，爸爸。”  
-琉华父亲从本殿露面了。虽然脸看起来很和善，但我知道这是个相当有癖好的人物，主要和桶子是一个方向的。让琉华子穿巫女装帮忙，也都是这个人的指使。  
+琉华父亲从本殿露面了。虽然脸看起来很和善，但我知道这是个相当有癖好的人物，主要和桶子是一个方向的。让琉华子穿巫女服帮忙，也都是这个人的指使。  
 “哦呀，这不是冈部君和真由理酱吗。圣诞快乐。”  
 “圣诞快乐。”  
 ……不，您是不应该说这句话的吧。  
@@ -80,13 +80,13 @@
 “啊哈哈……”  
 “对了，我想到个好主意。难得这么多女孩聚在一起，要不要新年时来神社里帮忙？”  
 “帮忙……扮巫女吗？”  
-“当然。我会好好准备篝酱和真由理酱的巫女装的。怎么样，有打工费哦？”  
+“当然。我会好好准备篝酱和真由理酱的巫女服的。怎么样，有打工费哦？”  
 “但是，那样太麻烦两位……”  
 “啊啦，我没问题哟，琉华君。一直受你们照顾，这种小事当然没问题。”  
 “真的吗？”  
 “唔……真由喜要准备新年派对所以……而且，虽然我喜欢做 cos 服，但自己穿就……”  
-真由理，巫女装可不是 cos，姑且不算吧……  
-“是吗……真由理酱的巫女装，冈部君，你应该很想看吧？”  
+真由理，巫女服可不是 cos，姑且不算吧……  
+“是吗……真由理酱的巫女服，冈部君，你应该很想看吧？”  
 “哈？”  
 为什么问我？  
 “是吗……冈伦？”  
@@ -94,7 +94,7 @@
 “哈哈哈。装傻也没用，都写在脸上了。”  
 怎么可能。哪怕现在照镜子，也绝不可能写着那种东西。  
 “这样啊……冈伦这么说的话\~”  
-“是吗？那就太好了！好，既然决定了，就要多准备几件巫女装了！孩子他妈！”  
+“是吗？那就太好了！好，既然决定了，就要多准备几件巫女服了！孩子他妈！”  
 仿佛像取得承诺后怕被反悔一样，琉华父亲匆忙躲回本殿里去了。果然不能小看这个人……  
 “那个……对不住了……”  
 “不，琉华君不用道歉的。”  
@@ -102,7 +102,7 @@
 “没事\~那个可以在这边忙完后再做。”  
 “……嗯，也是。我也来帮忙，什么事都可以。”  
 “谢谢，琉华君。”  
-“但是，巫女装什么的，我穿合适吗……”  
+“但是，巫女服什么的，我穿合适吗……”  
 “没问题！篝酱肯定合适呀\~”  
 “是吗？”  
 “嗯！真由喜给朋友做过很多 cos 服，我一看就知道的。”  
