--- a/article/sg0/doc/0065.md
+++ b/article/sg0/doc/0065.md
@@ -87,8 +87,8 @@
 啊，对了，之前比屋定来 LAB 的时候，真由理不在啊。  
 “她是我的青梅竹马，也是 LAB 的一员。”  
 “青梅竹马……”  
-“啊，在那之后，大家好像要在 LAB 聚会。要不，比屋定也穿上巫女装去神社帮忙如何？”  
-“巫女装……那是叫什么 cosplay 的吗？”  
+“啊，在那之后，大家好像要在 LAB 聚会。要不，比屋定也穿上巫女服去神社帮忙如何？”  
+“巫女服……那是叫什么 cosplay 的吗？”  
 “不，因为是正经的帮忙，我觉得……不算 cosplay。”  
 “哦。不过还是算了，也没有适合我的尺寸吧。”  
 的确，听她这么一说好像也是。虽然我觉得应该还有琉华子小时候穿的衣服，但这里还是没必要多嘴吧。  
