--- a/article/sg0/doc/0066.md
+++ b/article/sg0/doc/0066.md
@@ -25,7 +25,7 @@
 “我也不知道，大概是真由理邀请了绹，他就跟来了吧。”  
 “喂，偷偷摸摸地说什么呢？”  
 “不、不，没什么。”  
-“爸爸，我啊，超期待真由理姐姐穿上巫女装的样子呢！”  
+“爸爸，我啊，超期待真由理姐姐穿上巫女服的样子呢！”  
 “是呢。对不起啊，爸爸本来也想去的。”  
 ……嗯？  
 “那个……天王寺先生不一起吗？”  
@@ -58,7 +58,7 @@
 比屋定还没融入进来，但会随时间解决的吧。  
 吹雪：“呼呼呼，真由喜的 cosplay，超期待\~”  
 枫：“真是的，吹雪酱，那不是 cosplay，今天怎么说那都是‘正装’哦……”  
-由季：“很期待铃羽小姐的巫女装呢，是吧桥田？”  
+由季：“很期待铃羽小姐的巫女服呢，是吧桥田？”  
 桶子：“算是吧。虽说妹妹属性的巫女也不错，反正都这样了，要是能加上护士属性就萌爆表了嘛。”  
 吹雪：“啊哈哈，桥田先生还是一如既往的 HENTAI 呢。”  
 桶子：“但我是绅士。”  
