--- a/article/sg0/doc/0067.md
+++ b/article/sg0/doc/0067.md
@@ -12,7 +12,7 @@
 
 ![](../static/image/0067-1.png)
 
-琉华子很适合巫女装这件事已经不用多说了。另一边菲莉丝虽然装备着猫耳，但是跟平时的女仆装相比显得相当的质朴。但是，这也让人感到很新鲜，如果是粉丝团的那群人应该会按捺不住吧。  
+琉华子很适合巫女服这件事已经不用多说了。另一边菲莉丝虽然装备着猫耳，但是跟平时的女仆装相比显得相当的质朴。但是，这也让人感到很新鲜，如果是粉丝团的那群人应该会按捺不住吧。  
 “新年快乐喵！”  
 以两人的问候为开端，桶子、由季和一同前来的人们开始互相进行新年的问候。  
 “哦哦，菲莉丝碳！菲莉丝碳变成猫耳巫女什么的，活着真是太好了嗷！”  
