--- a/article/sg0/doc/0070.md
+++ b/article/sg0/doc/0070.md
@@ -29,12 +29,12 @@
 “总、总之……大家，先冷静……”
 “就算你这么说……”  
 “别管其他的！冷静下来按照他们说的做！”  
-明明是经历过无数次的情况，即使这样，我光是发出声音就很勉强了。但是，好像理解了我的心情一样，大家停止了骚乱，相互靠拢，咽着口水盯着侵入者的举动。把枪口笔直对着我们的男子们的身后响起了高跟鞋的声音。从脚步声判断，走上楼梯的是一位女性。果然是那家伙吗？桐生萌郁，是你吗？你，又要把真由理……最终，从开着的门走进来一位全身黑色的女性，身穿贴身的黑色骑手装，头戴黑色全覆式头盔，脸被黑色的面罩覆盖着看不见。这家伙果然是……但是，这伙人的目的是什么？那时他们的目标是我和桶子以及红莉栖，但现在红莉栖不在，那么是比屋定吗？穿黑色骑手装的女人扫视鸦雀无声的室内，径直走近靠在一起的我们，然后伸出了手。那只手抓住篝的手臂，拉了过去。  
+明明是经历过无数次的情况，即使这样，我光是发出声音就很勉强了。但是，好像理解了我的心情一样，大家停止了骚乱，相互靠拢，咽着口水盯着侵入者的举动。把枪口笔直对着我们的男子们的身后响起了高跟鞋的声音。从脚步声判断，走上楼梯的是一位女性。果然是那家伙吗？桐生萌郁，是你吗？你，又要把真由理……最终，从开着的门走进来一位全身黑色的女性，身穿贴身的黑色骑手服，头戴黑色全覆式头盔，脸被黑色的面罩覆盖着看不见。这家伙果然是……但是，这伙人的目的是什么？那时他们的目标是我和桶子以及红莉栖，但现在红莉栖不在，那么是比屋定吗？穿黑色骑手服的女人扫视鸦雀无声的室内，径直走近靠在一起的我们，然后伸出了手。那只手抓住篝的手臂，拉了过去。  
 “诶？”  
 “篝！”  
 这群人的目标是篝？但是，为什么是篝？不，如果说目标是篝的话，理由只有一个。果然，这群人知道，篝是来自 2036 年的人？  
 “不、不要！放开我！”  
-篝试图反抗。但是，穿黑色骑手装的女人的力量比想象的要强得多，篝的身体被轻松地拽了过去。  
+篝试图反抗。但是，穿黑色骑手服的女人的力量比想象的要强得多，篝的身体被轻松地拽了过去。  
 “不要！救命！谁来救救我！”  
 “篝！”  
 “真由理酱！救救我！”  
@@ -51,17 +51,17 @@
 “可恶！”  
 天王寺的手比枪口转动更快，抓住了第三个男人的手并把他拽了起来。立刻听到了骨头断掉的声音。  
 “啊啊啊！”  
-面对突然出现的壮汉，袭击者们表现出了骚乱。其中一个男人冲了过来企图打破局面。手伸向了看起来最弱小的人——绹。一般来说这是正确的判断，但此时此刻这个选择是完全错误的。那巨大的身体以无法想象地动作一瞬间拉近了距离，然后凭腕力击飞了那个男人。那人的背部狠狠地撞向墙壁并被弹了回来后倒在地上，余下的人看到这一幕大惊失色。于此同时，被绹放开的铃羽也行动了起来。用那无法想象是桶子女儿的纤细的腿，瞬间瞄准了穿黑色骑手装的女人的头踢了过去。  
+面对突然出现的壮汉，袭击者们表现出了骚乱。其中一个男人冲了过来企图打破局面。手伸向了看起来最弱小的人——绹。一般来说这是正确的判断，但此时此刻这个选择是完全错误的。那巨大的身体以无法想象地动作一瞬间拉近了距离，然后凭腕力击飞了那个男人。那人的背部狠狠地撞向墙壁并被弹了回来后倒在地上，余下的人看到这一幕大惊失色。于此同时，被绹放开的铃羽也行动了起来。用那无法想象是桶子女儿的纤细的腿，瞬间瞄准了穿黑色骑手服的女人的头踢了过去。  
 
 ![](../static/image/0070-3.png)
 
 “——！”
-铃羽的鞭腿被穿黑色骑手装的女人在极近的距离用手臂格挡住了。但是，她为了防御松开了抓着篝的手。  
+铃羽的鞭腿被穿黑色骑手服的女人在极近的距离用手臂格挡住了。但是，她为了防御松开了抓着篝的手。  
 “篝小姐！”  
 我马上伸出手把篝拉了回来。  
 “冈部先生……”  
 “——！”
-穿黑色骑手装的女人发觉形势不利，就护着被铃羽踢到的手臂一下子窜出了 LAB。其他袭击者们也抱起倒下的同伴跟在她后面离开了。之前的喧闹一下子变回了静寂。  
+穿黑色骑手服的女人发觉形势不利，就护着被铃羽踢到的手臂一下子窜出了 LAB。其他袭击者们也抱起倒下的同伴跟在她后面离开了。之前的喧闹一下子变回了静寂。  
 “冈……冈伦……”  
 听到真由理颤抖的声音，我总算回过神来。  
 “真由理……没事吧？”  
