--- a/article/sg0/doc/0072.md
+++ b/article/sg0/doc/0072.md
@@ -49,7 +49,7 @@
 “……手臂怎么样了？”  
 “手臂？”  
 “啊……已经不要紧了吗？”  
-昨天穿黑色骑手装的女人，用手臂接下了铃羽的踢击。后来问了铃羽，说是确实踢得很重，也就是说对方应该相应地会留下伤痕。如果桐生萌郁身上有那痕迹的话——  
+昨天穿黑色骑手服的女人，用手臂接下了铃羽的踢击。后来问了铃羽，说是确实踢得很重，也就是说对方应该相应地会留下伤痕。如果桐生萌郁身上有那痕迹的话——  
 “……不知道你在说什么。”  
 “这样啊……”  
 这样还不能断定萌郁是清白的。  
@@ -67,7 +67,7 @@
 “谢谢你，把袖子翻回来吧。”  
 “…………”  
 桐生萌郁微微歪了歪头，然后把卷起的袖子恢复了原状。  
-那个穿黑色骑手装的女人，并不是桐生萌郁。果然是这样，我内心之中也有着不是她的预感。仔细想想，桐生萌郁本来更早就知道椎名篝在我们这里，没必要像这样在一大群人集中在一起的时候发动袭击。桐生萌郁跟这次事件没有关系——能确认这个事实真是太好了。但是，这样一来又有了新的问题。那个穿黑色骑手装的女人，到底是谁？  
+那个穿黑色骑手服的女人，并不是桐生萌郁。果然是这样，我内心之中也有着不是她的预感。仔细想想，桐生萌郁本来更早就知道椎名篝在我们这里，没必要像这样在一大群人集中在一起的时候发动袭击。桐生萌郁跟这次事件没有关系——能确认这个事实真是太好了。但是，这样一来又有了新的问题。那个穿黑色骑手服的女人，到底是谁？  
 为了把她的疑惑糊弄过去，我听取了目前为止的调查报告，并请她继续调查。然后我就和她分别了，向另一个地方赶去。接下来我要造访的是这里——  
 
 ![](../static/image/0072-2.png)
