--- a/article/sg0/doc/0073.md
+++ b/article/sg0/doc/0073.md
@@ -38,7 +38,7 @@
 “……”  
 桶子：“怎么了，冈伦？”  
 “没……”  
-胳膊上的伤——和那个穿黑色骑手装的女人一样，是在左臂……但是，怎么可能……  
+胳膊上的伤——和那个穿黑色骑手服的女人一样，是在左臂……但是，怎么可能……  
 吹雪：“那么，虽然有点唐突，冈伦先生，关于昨天那件事，你能说明一下吗？”  
 比起真由理和琉华子，吹雪看起来从容多了。幸亏吹雪和枫出去买东西，没有遭遇袭击，在外面也没碰上那伙人，真是太幸运了。  
 “是呢。那首先……”  
