--- a/article/sg0/doc/0085.md
+++ b/article/sg0/doc/0085.md
@@ -1,6 +1,6 @@
 # 存在证明的自动机械 - 11
 > 1.081163  
-> [ 2011/01/05 ] 送绹回显像管工房的路上遇袭，真帆独自逃跑。幸得天王寺解救。穿黑色骑手装的女人基本可以排除是萌郁的可能。  
+> [ 2011/01/05 ] 送绹回显像管工房的路上遇袭，真帆独自逃跑。幸得天王寺解救。穿黑色骑手服的女人基本可以排除是萌郁的可能。  
 
 | [←prev](./0084) | [menu](../) | [next→](./0086) |
 
@@ -53,14 +53,14 @@
 “*Don’t Move!*”  
 袭击者同样无视了我，向比屋定的方向追去。于是我迅速挡在了他们面前。  
 “啊！”  
-昏暗的小巷响起了枪声，真由理和绹也发出了惨叫。开枪了！？戴着全覆式头盔的袭击者对着空中进行了威吓射击。在东京的街道上这么做，警察很快就会过来……！也就是说那群人对这种事也无所谓吗！？仔细观察，那家伙不仅是头盔，全身衣服都是黑色的、紧贴身体的骑手装。从身体线条可以看出是个女人，脸被黑色的护罩遮住看不见。难道是……桐生萌郁吗？不，不可能，她现在应该正在菲莉丝家里。  
+昏暗的小巷响起了枪声，真由理和绹也发出了惨叫。开枪了！？戴着全覆式头盔的袭击者对着空中进行了威吓射击。在东京的街道上这么做，警察很快就会过来……！也就是说那群人对这种事也无所谓吗！？仔细观察，那家伙不仅是头盔，全身衣服都是黑色的、紧贴身体的骑手服。从身体线条可以看出是个女人，脸被黑色的护罩遮住看不见。难道是……桐生萌郁吗？不，不可能，她现在应该正在菲莉丝家里。  
 
 ![](../static/image/0085-2.png)
 
-穿黑色骑手装的女人一言不发地走到我的面前。  
+穿黑色骑手服的女人一言不发地走到我的面前。  
 “你们的目标是……比屋定吗？”  
 “……”  
-如果被盯上的是比屋定，我刚才让她逃跑，是好还是坏呢？穿黑色骑手装的女人紧盯着我，同时用手势向其他两个男人发出了指示。两人持着枪向比屋定消失的小路里追去。  
+如果被盯上的是比屋定，我刚才让她逃跑，是好还是坏呢？穿黑色骑手服的女人紧盯着我，同时用手势向其他两个男人发出了指示。两人持着枪向比屋定消失的小路里追去。  
 “等等！”  
 我突然大吼一声，却也犹豫着要不要做更多抵抗。比屋定没多久就会被那两个强壮的蒙面男子追上的吧。但是，如果继续抵抗，不只是我，连真由理和绹的生命也会暴露在危险中——可恶，一定要逃掉啊，比屋定！这样祈祷着，眼睁睁看着袭击者们跑向了小路。  
 “咕呜——！”  
@@ -69,7 +69,7 @@
 一个魁梧的肌肉男从小路里走了出来。是天王寺裕吾。从店里赶了过来吗？  
 “绹这么晚还没回来于是过来看看……你们这些家伙对我的女儿动手了？别以为可以简单了事……！”  
 “*……! Pull back!*”  
-穿黑色骑手装的女人头盔里传来这句话，是撤退指令，一定是在用无线电。判断如此果断，这群人果然是专业的。面包车滑门都没关就紧急发动，疾驰而去，驾驶员应该在车里待机。真由理和绹瘫坐在原地，平安无事的样子。穿黑色骑手装的女人转过身准备逃向其他的小路。  
+穿黑色骑手服的女人头盔里传来这句话，是撤退指令，一定是在用无线电。判断如此果断，这群人果然是专业的。面包车滑门都没关就紧急发动，疾驰而去，驾驶员应该在车里待机。真由理和绹瘫坐在原地，平安无事的样子。穿黑色骑手服的女人转过身准备逃向其他的小路。  
 “站住！”  
 我追上去，女人突然转过身用枪柄砸了过来。过于突然，我无法躲开，下巴受到了强烈撞击，当场倒地，身体用不上力气。  
 “冈伦！”  
