--- a/article/sg0/doc/0100.md
+++ b/article/sg0/doc/0100.md
@@ -52,7 +52,7 @@
 “就是因为远，你过去说不定妈妈会很高兴的呢。好好努力啊，爸爸。”  
 “啊，好，抱歉咯……话说冈伦，为什么突然问这个？”  
 “不……只是有点在意……”  
-那时候穿着黑色骑手装的女人，说不定，是阿万音由季——这个疑惑，一直在我的脑海里挥之不去。如果真是这样的话，可能和篝的事情也有一定的关系。但是话说回来，遇到袭击事件是之前的世界线的事情。对于没有发生袭击事件的这条世界线来说，已经没法证明了。  
+那时候穿着黑色骑手服的女人，说不定，是阿万音由季——这个疑惑，一直在我的脑海里挥之不去。如果真是这样的话，可能和篝的事情也有一定的关系。但是话说回来，遇到袭击事件是之前的世界线的事情。对于没有发生袭击事件的这条世界线来说，已经没法证明了。  
 “如果，她有什么……”  
 “……？”  
 “妈妈怎么了吗？”  
