--- a/article/sg0/doc/0132.md
+++ b/article/sg0/doc/0132.md
@@ -96,7 +96,7 @@
 “……虽然不太清楚情况，但我也想来看看有什么能帮忙的……”  
 “但是，不好把阿万音氏也卷进来……”  
 “不，只是陪篝待在一起，应该没问题。”  
-我之前怀疑过，袭击 LAB 的黑色骑手装女性会不会是由季，但现在想想应该不是。如果是她的话，不用这么绕圈子，只要利用熟人的立场接近，邀请一起外出之类的，然后绑架就可以了，没必要冒着更高的风险直接袭击。  
+我之前怀疑过，袭击 LAB 的黑色骑手服女性会不会是由季，但现在想想应该不是。如果是她的话，不用这么绕圈子，只要利用熟人的立场接近，邀请一起外出之类的，然后绑架就可以了，没必要冒着更高的风险直接袭击。  
 “不好意思，那么，由季小姐请和篝待在一起吧。  
  所有事情结束之前，就请你们待在桶子的藏身处，地址的话问桶子。  
  具体情况的话……等到一切安稳下来再告诉你。”  
