--- a/article/sg0/doc/0136.md
+++ b/article/sg0/doc/0136.md
@@ -9,7 +9,7 @@
 “你想对篝做什么？”  
 铃羽即使仍处在双手背在头后的状态，也以只凭眼神就能杀人的气势紧盯着莱耶丝。  
 “你心知肚明吧——我要把她脑中的记忆替换成 *Makise·Kurisu* 的。”  
-也就是说，之前世界线上的篝，说不定不是被 STRATFO 那群家伙而是被他们——不只如此，那时袭击 LAB 的穿黑色骑手装的女人，该不会就是——  
+也就是说，之前世界线上的篝，说不定不是被 STRATFO 那群家伙而是被他们——不只如此，那时袭击 LAB 的穿黑色骑手服的女人，该不会就是——  
 “你不用摆出那副表情哦，毕竟为了这个，我们已经用动物和人类反复试验过不知道多少次了。”  
 莱耶丝爱抚着篝的脸颊。  
 “说起来，这系统之前有致命性缺陷。但是，这回已经解决了那个问题。  
