--- a/article/sg0/doc/0141.md
+++ b/article/sg0/doc/0141.md
@@ -39,17 +39,17 @@
 
 ![](../static/image/0141-2.png)
 
-但是……我们太天真了。好像已经看穿了我们的行动一样，另外一群人早已包围了小路严阵以待。面对这出乎意料的情况，我们刚想逃走，比屋定就被其中一人抓住了。事到如今，我和桶子完全无法抵抗，就被反扭着手臂，按在地上。和闯入大楼的那群人不同，这群人头戴黑色的全覆式头盔，身穿黑色的骑手装。其中，抓着比屋定的人，从身型上看明显是女性。这种装扮袭击我们的女人，我的记忆中只有一个——  
+但是……我们太天真了。好像已经看穿了我们的行动一样，另外一群人早已包围了小路严阵以待。面对这出乎意料的情况，我们刚想逃走，比屋定就被其中一人抓住了。事到如今，我和桶子完全无法抵抗，就被反扭着手臂，按在地上。和闯入大楼的那群人不同，这群人头戴黑色的全覆式头盔，身穿黑色的骑手服。其中，抓着比屋定的人，从身型上看明显是女性。这种装扮袭击我们的女人，我的记忆中只有一个——  
 
 ![](../static/image/0141-3.png)
 
 “……不要出声，照我说的做，否则……会没命。”  
-穿黑色骑手装的女人左手控制着比屋定，右手拿出了军用匕首，把它抵在比屋定的脖子上。她的声音，即使因为头盔变得十分沉闷，我也很熟悉。  
+穿黑色骑手服的女人左手控制着比屋定，右手拿出了军用匕首，把它抵在比屋定的脖子上。她的声音，即使因为头盔变得十分沉闷，我也很熟悉。  
 “住——住手！”  
 我的脑海中，一段令我毛骨悚然的可怕记忆苏醒了——“椎名真由理，不需要。” ——虽然那是发生在其它世界线的事，但是，曾经夺走我最重要的青梅竹马的那个冷血的声音，如今，又再度出现在这里。  
-我把牙齿咬得吱吱作响，紧盯着那个穿黑色骑手装的女人。  
+我把牙齿咬得吱吱作响，紧盯着那个穿黑色骑手服的女人。  
 “你要的东西我会交出来，所以快住手……！”  
-在我挤出这句话后，穿黑色骑手装的女人把匕首从比屋定的脖子挪开，然后让另一个男人控制比屋定，自己脱掉了头盔。  
+在我挤出这句话后，穿黑色骑手服的女人把匕首从比屋定的脖子挪开，然后让另一个男人控制比屋定，自己脱掉了头盔。  
 
 ![](../static/image/0141-4.png)
 
