--- a/article/sg0/doc/0047.md
+++ b/article/sg0/doc/0047.md
@@ -55,7 +55,7 @@
 
 ![](../static/image/0047-2.png)
 
-突然，远处响起了爆炸声。周围的人们发出惨叫，惊慌失措地各自向各自的方向逃走。火焰伴随着爆炸声后燃起，地点在刚才那些穿迷彩服的男人们消失的方向。直升机螺旋桨的声音越来越大，那个黑色的狰狞的机体，从刚才开始就在真帆的视野里若隐若现。接着，响起了激烈的枪战声。那不是一个两个人开枪的动静。复数的集团彼此间的战斗，正在秋叶原车站前如火如荼地展开。犹如战争开始了……依照冈部说的话，阿万音铃羽说不定就在时间机器附近，或许已经被卷入到那场战斗中。刚才那个穿黑色骑手装的女人也很让人在意。  
+突然，远处响起了爆炸声。周围的人们发出惨叫，惊慌失措地各自向各自的方向逃走。火焰伴随着爆炸声后燃起，地点在刚才那些穿迷彩服的男人们消失的方向。直升机螺旋桨的声音越来越大，那个黑色的狰狞的机体，从刚才开始就在真帆的视野里若隐若现。接着，响起了激烈的枪战声。那不是一个两个人开枪的动静。复数的集团彼此间的战斗，正在秋叶原车站前如火如荼地展开。犹如战争开始了……依照冈部说的话，阿万音铃羽说不定就在时间机器附近，或许已经被卷入到那场战斗中。刚才那个穿黑色骑手服的女人也很让人在意。  
 为了给自己做过的事做个了结，真帆连思绪都没来得及整理好，就这样摇摇晃晃地走了起来。  
 
 广播馆的电梯故障中，无法使用。真帆无奈，只好爬楼梯向楼顶走去。馆内好像停电了，不管哪层都没有照明。上方传来断断续续的枪战声。不可思议的是，没有看见一个避难的人。楼内有很多店铺，当然也应该有客人才是。然而，明明电梯正在故障中，在楼梯也一个人都没遇到。是大家在这之前就去避难了吗，还是……在哪里藏着，等着这可怕的事态结束？一边想着，真帆满身是汗地继续爬楼梯。  
@@ -64,7 +64,7 @@
 ![](../static/image/0047-3.png)
 
 “呜…呜呜……妈妈…妈妈她……”  
-那个人影坐在楼梯上，抱着双膝。呜咽的声音听起来很模糊，大概能听出好像是位女性。昏暗的光线下模模糊糊地看到她的头部显得异常大而圆，仔细一看发现那是全覆式头盔。真帆这才意识到，在那边哭的正是刚刚打了自己耳光的那个穿黑色骑手装的女人。  
+那个人影坐在楼梯上，抱着双膝。呜咽的声音听起来很模糊，大概能听出好像是位女性。昏暗的光线下模模糊糊地看到她的头部显得异常大而圆，仔细一看发现那是全覆式头盔。真帆这才意识到，在那边哭的正是刚刚打了自己耳光的那个穿黑色骑手服的女人。  
 “呜呜呜……妈妈……在哪里啊……妈妈……”  
 和刚才威胁真帆的判若两人。现在的她只是一味地哭叫着妈妈。  
 “呐，发生了什么事？”  
@@ -81,7 +81,7 @@
 “是……我的错……”  
 真帆抱着头。
 “如果我没有说那种话……真由理就……”  
-穿黑色骑手装的女人缓缓站起，逼近了真帆。  
+穿黑色骑手服的女人缓缓站起，逼近了真帆。  
 “没错，你从冈部伦太郎那里套出了情报……然后演变成了现在一发不可收拾的事态……  
  把妈妈……还给我……！”  
 真帆被揪住衣襟拽了起来。没有作任何辩解。  
@@ -164,7 +164,7 @@
 “……好。”  
 “红莉栖”最后再一次向真帆投以微笑，然后从画面中消失了。  
 
-真帆擦干了眼泪之后，立刻狠狠地敲了敲旁边还在哭哭啼啼的穿骑手装女性的头盔。  
+真帆擦干了眼泪之后，立刻狠狠地敲了敲旁边还在哭哭啼啼的穿骑手服女性的头盔。  
 “你要哭到什么时候？你不是想拯救真由理小姐吗？那就协助我。”  
 “协助……？”  
 “首先，先救出冈部。他的话，一定能想出如何处理现在事态的方法的。”  
@@ -188,7 +188,7 @@
 “已经知道 STRATFO 基地的位置了。”  
 “……告诉我。冲进去，杀光所有人……”  
 “…………”
-冷血的话让真帆不寒而栗。从穿黑色骑手装的女人身上，真帆感受到了无尽的疯狂。但是，现在只能跟她合作。只凭真帆一人是不可能从 STRATFO 那里夺回冈部的。  
+冷血的话让真帆不寒而栗。从穿黑色骑手服的女人身上，真帆感受到了无尽的疯狂。但是，现在只能跟她合作。只凭真帆一人是不可能从 STRATFO 那里夺回冈部的。  
 
 “出发吧。”  
 为了对亲手导致的未来负责。  
