--- a/article/sg0/doc/0157.md
+++ b/article/sg0/doc/0157.md
@@ -14,7 +14,7 @@
 铃羽苦笑着，把手伸进了电脑的核心所在。放在那里的外置硬盘，怎么看都不像 2036 年的科技，而像是现在——2011 年的东西。应该是桶子瞒着铃羽偷偷放在这里的，不过铃羽一下子就看到了液晶触摸屏上，弹出了“驾驶舱内探测到异物”的警告。这台先进的机器不花一秒就识破了 21 世纪初的伪装。从伪装的布线可以看出，桶子的目的不是为了监视和获得数据，应该是为了不让这个硬盘被其他人发现，所以偷偷藏在这里。出发前都要装作没发现那东西吗……  
 
 正考虑着这些事情的时候，铃羽听到外面沉重的铁门打开的声音。  
-有谁来了！铃羽迅速从枪套中拔出手枪，在驾驶舱中窥探铁门的方向。前几天才发生篝的事件，还是小心为妙。不过，看清来的是谁之后，铃羽马上就解除了警戒状态。  
+有谁来了！铃羽迅速从枪套中拔出手枪，在驾驶舱中窥探铁门的方向。前几天才发生篝的事件，还是小心为妙。不过，看清来人的面容，铃羽立刻解除了警戒状态。  
 “真由姐，很少见你来这里呢。”  
 铃羽收起枪，从驾驶舱跳下来迎向真由理。  
 “铃小姐……”  
@@ -35,7 +35,7 @@
 真由理的脸上又流下一道泪痕。  
 “真由喜呢……即使在这个世界，也什么作用都发挥不了。  
  所以，对于世界也好，对于冈伦也好，更需要的是红莉栖小姐啊。”  
-铃羽突然陷入了一种错觉，好像未来和现在的真由理重叠在了一起。眼前的人，收束成为了铃羽从小看到的“真由姐”……铃羽再也无法拒绝她的请求。  
+铃羽突然陷入了一种错觉，好像未来和现在的真由理重叠在了一起。眼前的人，收束成为了铃羽从小一直看着的“真由姐”……铃羽再也无法拒绝她的请求。  
 “我所了解的未来的真由姐……偶尔也会这么说……  
  那种时候，她总是茫然地望着天空，非常寂寞、悲伤的样子。  
  我和篝看到真由姐那样的表情，都感觉好难过。”  
