--- a/article/sg0/doc/0159.md
+++ b/article/sg0/doc/0159.md
@@ -63,7 +63,7 @@
 
 ![](../static/image/0159-2.png)
 
-铃羽听到真由理的悲鸣，赶紧回头，看到穿着迷彩服的武装团体接二连三地越过楼顶的栅栏。真由理被其中的一个挟持了。  
+铃羽听到真由理的悲鸣，赶紧回头，看到穿着迷彩服的武装部队接二连三地越过楼顶的栅栏。真由理被其中的一个挟持了。  
 （是从外面的墙壁爬上来的？！）  
 铃羽对自己的失误非常后悔。对于外墙方向的入侵应该要充分警戒才是，可是因为收到父亲的视频邮件，心情不知不觉就放松了。对面一共有大约 30 个男人，都穿着迷彩战斗服，装备着手枪和自动步枪。  
 “放下枪，趴在地上，双手放在头后面。”  
@@ -76,7 +76,7 @@
 “不要说话，这些家伙，要是动真格的，真的会杀了姐姐的。”  
 “啊……！”  
 “我不会有事的。”  
-光看这个武装团体的行动，就能轻易想到，他们是实战的专家。想必他们的目标就是时间机器，并且已经掌握情报，知晓铃羽是唯一能够操作它的人吧。因此，铃羽判断自己是不会轻易被杀的。那个队长走到铃羽身边，蹲下用一侧膝盖压住她的后背，双手毫无顾忌地对她进行搜身。
+光看这群人的行动，就能轻易想到，他们是实战的专家。想必他们的目标就是时间机器，并且已经掌握情报，知晓铃羽是唯一能够操作它的人吧。因此，铃羽判断自己是不会轻易被杀的。那个队长走到铃羽身边，蹲下用一侧膝盖压住她的后背，双手毫无顾忌地对她进行搜身。
 “喂……我姑且也是女性，稍微注意点啊。”  
 身上藏的用来以防万一的另一把小型手枪，还有几把小刀，都被搜走了。  
 “目标 2 和目标 3 确保。那边呢？”  
