统一用法：*Strategic·Focus* *Arc Rewrite*

--- a/article/sg0/doc/0058.md
+++ b/article/sg0/doc/0058.md
@@ -24,12 +24,12 @@
 对自己说了数遍之后，总算是平息了胸中的不安。  
 “叔叔，脸色很差啊。没关系吗？”  
 “别在意……比起这个，桶子……介绍一下。”  
-“啊，这位是桐生氏。<abbr title="编辑代理制作的简称。承包来自各个出版社的策划和编辑工作。">编代</abbr>公司的专业写手。”  
+“啊，这位是桐生氏。<abbr title="编辑代理制作的简称，承包来自各个出版社的策划和编辑工作。">编代</abbr>公司的专业写手。”  
 “我是……桐生……萌郁……”  
 
 ![](../static/image/0058-1.png)
 
-她安静地递过来名片，上面写着<abbr title="（虚构）位于秋叶原的编辑出版社。主要业务是撰写电脑系列杂志的文章等。">【Arc Rewrite】</abbr>会社的名字。桶子简短地向她介绍了我和铃羽。  
+她安静地递过来名片，公司名字是 <abbr title="（虚构）位于秋叶原的编辑出版社。主要业务是撰写电脑系列杂志的文章等。">*Arc Rewrite*</abbr>，职位是出版事业部的编辑、撰稿人。桶子简短地向她介绍了我和铃羽。  
 “呐，桶子，你为什么……认识这个人？”  
 “之前，桐生氏负责的杂志在制作有关于秋叶原都市传说的特刊。  
  当时她联系我说想就我的工作进行采访。  
