--- a/article/sg0/doc/0078.md
+++ b/article/sg0/doc/0078.md
@@ -14,7 +14,7 @@
 “采访哦。”  
 “采访？”  
 “其实本来计划昨天在宾馆接受采访的。”  
-『我所在的【Arc Rewrite】，正在制作商业杂志的专题报道  
+『我所属的 *Arc Rewrite* 公司，正在制作商业杂志的专题报道  
  专题内容是《人工智能研究最前线》”  
  ![](../static/image/emoji/bear-ooohyeah.png)  
  我负责比屋定博士，整理博士的业绩和最新的研究内容  
