--- a/article/sg0/doc/0111.md
+++ b/article/sg0/doc/0111.md
@@ -87,7 +87,7 @@
 男人再次拼命地摇头。  
 “STRATFO 吗……又是个麻烦的家伙……”  
 STRATFO……我听说过。中二病时期，在网上调查过。”  
-“正式名称『<abbr title="neta 自现实中的 Strategic Forecasting Inc.">*Strategic·Focus*</abbr>』，被称为“影之 CIA”，是美国的民间情报组织。特别强化了军事相关的能力，在海湾战争和伊拉克战争中，听说发挥了不少的作用。会被 SERN 的 Rounder 天王寺如此评价，想必不会是简单的对手。但是……现在不是胆小的时候。  
+“正式名称 <abbr title="neta 自现实中的 Strategic Forecasting Inc.">*Strategic·Focus*</abbr>，被称为“影之 CIA”，是美国的民间情报组织。特别强化了军事相关的能力，在海湾战争和伊拉克战争中，听说发挥了不少的作用。会被 SERN 的 Rounder 天王寺如此评价，想必不会是简单的对手。但是……现在不是胆小的时候。  
 “听到了吗，桶子！现在立刻骇进 STRATFO！”  
 “*Okey-dokey!*”  
 姑且算是达成了目的，全身快要脱力了。但是，还不能这样。接下来才是重头戏。  
