--- a/article/sg0/doc/0022.md
+++ b/article/sg0/doc/0022.md
@@ -39,7 +39,7 @@
 “真由姐做的吗？”  
 “嗯\~托由季的福，真由喜的厨艺在突飞猛进的哦！”  
 “爸……哥哥呢？”  
-“去 *MayQueen* 了哦\~据说那之后有打工。”  
+“去 MayQueen 了哦\~据说那之后有打工。”  
 “这样啊……”  
 “啊，你在想既然桶子君不在，晚上要出门之类的吧？不可以的哦！”  
 “没事……”  
