--- a/article/sg0/doc/0024.md
+++ b/article/sg0/doc/0024.md
@@ -168,7 +168,7 @@
 “嘿嘿\~”  
 “红莉栖”挂断电话之后，我的心里超出想象的轻松。果然，我再次深刻地感受到，我心底里，是非常喜欢牧濑红莉栖的……  
 “但是，向人工智能道歉这种事，有那么奇怪吗？  
- 我的朋友——之前在 *MayQueen* 里介绍过的那个家伙——一直对二次元的女孩子们下跪之类的……”  
+ 我的朋友——之前在 MayQueen 里介绍过的那个家伙——一直对二次元的女孩子们下跪之类的……”  
 “这、这种精神……对我来说有点……”  
 糟糕，不小心冷场了。例子举得太糟糕了。  
 “那个，总之，多亏了比屋定，帮大忙了。”  
