--- a/article/sg0/doc/0026.md
+++ b/article/sg0/doc/0026.md
@@ -218,7 +218,7 @@
 “很有趣的干杯问候哟。”  
 “真是让人自我厌恶……”  
 “说什么呢？不是很 *cool* 的 *cat* 嘛！”  
-“真帆喵，什么时候能来 *MayQueen* 工作喵？”  
+“真帆喵，什么时候能来 MayQueen 工作喵？”  
 “没有那个打算啦……”  
 菲莉丝跟雷斯吉宁教授也为了能让比屋定振作起来而高兴地跟她说着话。  
 “铃小姐，来，干杯\~”  
