--- a/article/sg0/doc/0035.md
+++ b/article/sg0/doc/0035.md
@@ -50,7 +50,7 @@
 “哦……”  
 话虽如此，哪些是真话哪些是假话，很可疑。  
 “我好意外啊，没想到真帆碳竟然和冈伦认识。  
- 之前在 *MayQueen* 撞见的时候，我还不知道怎么回事呢。  
+ 之前在 MayQueen 撞见的时候，我还不知道怎么回事呢。  
  不过很快就发现交集了，因为牧赖红莉栖氏这位共同的朋友。  
  可是真帆碳，不是说过要对冈伦保密吗？结果还是坦白了吗？”  
 “正确来说，是被识破了。”  
