--- a/article/sg0/doc/0053.md
+++ b/article/sg0/doc/0053.md
@@ -47,7 +47,7 @@
 
 目送她离开之后，我倒进沙发里。  
 “真由理呢？”  
-“在 *MayQueen* 吧？今天没来哦。”  
+“在 MayQueen 吧？今天没来哦。”  
 那样的话，稍微等等……还是说去接她呢？  
 “话说，冈伦，刚才的电话什么的……那个，是怎么回事？”  
 刚才……应该是说在去见教授他们之前打的确认行程的电话吧。  
