--- a/article/sg0/doc/0081.md
+++ b/article/sg0/doc/0081.md
@@ -85,7 +85,7 @@
 “呃，好吧。没想到，‘有项重大任务要拜托两位’，就是不要吃晚饭……”  
 突然从菲莉丝那里收到“今天晚上开女子会”的通知，作为准备，菲莉丝拜托她们不要吃晚饭保持空腹。真帆和萌郁都很忠实地遵守了。  
 “快点快点，快拿喜欢的来吃喵！蛋糕、冰淇淋什么的，还买了稍微贵一点的喵！”  
-菲莉丝欢快地从便利店的塑料袋里一包接一包的往外掏。平常看起来是很有大小姐范，实际上也的确是大小姐的菲莉丝，有需要的话，也会买价钱要多个一两位的蛋糕。不过，她也很明白，深夜女子会需要的蛋糕零食要从便利店买，于是她也毫不介意地执行了。真帆觉得不论是 *MayQueen* 的客人也好，女仆们也好，一定都很敬仰她这一点。*MayQueen* 年初开张以来，好像就一直处于女仆数量不足的状态。但是今天菲莉丝身上却看不出一丝疲惫。  
+菲莉丝欢快地从便利店的塑料袋里一包接一包的往外掏。平常看起来是很有大小姐范，实际上也的确是大小姐的菲莉丝，有需要的话，也会买价钱要多个一两位的蛋糕。不过，她也很明白，深夜女子会需要的蛋糕零食要从便利店买，于是她也毫不介意地执行了。真帆觉得不论是 MayQueen 的客人也好，女仆们也好，一定都很敬仰她这一点。MayQueen 年初开张以来，好像就一直处于女仆数量不足的状态。但是今天菲莉丝身上却看不出一丝疲惫。  
 “嗯\~？真帆喵怎么了喵？迷上菲莉丝了喵？来自女孩子的求爱一直欢迎的喵\~\~”  
 “啥！才没有啦！”  
 “不要害羞喵！对礼物满意的话，菲莉丝也会很开心的喵！”  
