--- a/article/sg0/doc/0114.md
+++ b/article/sg0/doc/0114.md
@@ -88,7 +88,7 @@
 “真由理小姐呢！？ 真由理小姐在哪里？  
  我必须向她问清楚那首歌的事情！”  
 篝着急地在 LAB 四处张望。  
-“真由理要去 *MayQueen* 打工，你来之后她就出去了。”  
+“真由理要去 MayQueen 打工，你来之后她就出去了。”  
 “她也很担心篝碳的情况哦。”  
 真由理由于之前就被拜托了，今天要在午餐时段打工，不得不离开，一脸歉意地将篝托付给了我跟桶子，然后依依不舍地离开了。  
 “这样啊……”  
@@ -111,7 +111,7 @@
 “对不起……给你们添麻烦了……”  
 虽说如此，我和桶子知道，这已经是很大的进步了。真由理听过的歌，篝也听过。篝说是小时候听到这首歌的，也就是说，是在未来，是乘时间机器跳跃到过去之前的，未来。那么答案只有一个——教会篝这首歌的，是未来的真由理。  
 “冈伦，先去问问真由喜怎么样？”  
-“是啊。她说过，打工只是在午餐时段，算好时间去 *MayQueen* 一趟吧。”  
+“是啊。她说过，打工只是在午餐时段，算好时间去 MayQueen 一趟吧。”  
 “我，我也要去！”  
 篝刷地一下从沙发站起来。  
 “别着急，也不是现在马上就去，你再稍微休息一下比较好。”  
