--- a/article/sg0/doc/0077.md
+++ b/article/sg0/doc/0077.md
@@ -7,7 +7,7 @@
 ---
 
 第二天，新年的第三天，我连续三天来到了秋叶原。这次为的是前往菲莉丝的公寓，确认比屋定的情况……不，不对，应该是为了确认桐生萌郁的情况。昨天，大体上是定下了比屋定和桐生萌郁同居的事。桐生萌郁能向比屋定取材，比屋定也能消除独自一人的不安，这或许是最佳方案。但是，我知道桐生萌郁的另一面——她是一名 Rounder。不只是所谓的“学过了防身术”这种程度，而是必要的情况下能够杀人的技术。问题是，这种技术，要向谁施展呢？在我们不用费心搜索 IBN5100，也没有造出时间机器的这条世界线里，Rounder 应该是不会盯上我们的。虽然心里很清楚这些道理，但是……  
-就算是新年假期，秋叶原看上去还是一如既往的热闹。从家电贩卖店到女仆咖啡店，基本都是从元旦起就开门营业了，只是营业时间跟平时比有所缩短。不过因为福袋和新春特别菜单之类的，以及只能在元旦三天才能买到的商品，以此为目的聚集的客人更多了。从附近神社过来的穿着靓丽的女性们和一成不变的秋叶原阿宅们在人行道上穿梭着，真是跟平时比起来更加混乱的景象啊。话说回来，*MayQueen* 这几天也没有休息还在营业啊。菲莉丝和真由理也是，今天早上就说去店里上班。这样的话，公寓里只有那两个人了吧——准确来说，管家黑木先生应该也在。应该……没问题吧？桐生萌郁会对比屋定实施某种行动——比如施加暴力什么的——想想还是不可能，因为没有这么做的理由。但是，就算脑中再怎么明白，心情还是冷静不下来。怎么都无法释怀，留意到自己心中不断堆积的心结，昨天并没有睡得很好。亲眼见证两人的共同生活，确认没什么问题的话，说不定这种焦躁就会慢慢消散。  
+就算是新年假期，秋叶原看上去还是一如既往的热闹。从家电贩卖店到女仆咖啡店，基本都是从元旦起就开门营业了，只是营业时间跟平时比有所缩短。不过因为福袋和新春特别菜单之类的，以及只能在元旦三天才能买到的商品，以此为目的聚集的客人更多了。从附近神社过来的穿着靓丽的女性们和一成不变的秋叶原阿宅们在人行道上穿梭着，真是跟平时比起来更加混乱的景象啊。话说回来，MayQueen 这几天也没有休息还在营业啊。菲莉丝和真由理也是，今天早上就说去店里上班。这样的话，公寓里只有那两个人了吧——准确来说，管家黑木先生应该也在。应该……没问题吧？桐生萌郁会对比屋定实施某种行动——比如施加暴力什么的——想想还是不可能，因为没有这么做的理由。但是，就算脑中再怎么明白，心情还是冷静不下来。怎么都无法释怀，留意到自己心中不断堆积的心结，昨天并没有睡得很好。亲眼见证两人的共同生活，确认没什么问题的话，说不定这种焦躁就会慢慢消散。  
 怀着复杂的心情，我急速赶往菲莉丝的公寓。  
 
 ![](../static/image/0077-1.png)
