--- a/article/sg0/doc/0082.md
+++ b/article/sg0/doc/0082.md
@@ -6,7 +6,7 @@
 
 ---
 
-我在秋叶原下了电车，稍微叹了口气。话说，从年初开始我已经连续 5 天来秋叶原了。元旦是新年参拜；2 号是为了处理之前几天因中途世界线改变出现的骚动；3 号是去见比屋定和桐生萌郁。4 号也就是昨天，参加了真由理邀请的 *MayQueen* 的新年派对。去年夏天以来已经很久没有像这样每天都来秋叶原了。  
+我在秋叶原下了电车，稍微叹了口气。话说，从年初开始我已经连续 5 天来秋叶原了。元旦是新年参拜；2 号是为了处理之前几天因中途世界线改变出现的骚动；3 号是去见比屋定和桐生萌郁。4 号也就是昨天，参加了真由理邀请的 MayQueen 的新年派对。去年夏天以来已经很久没有像这样每天都来秋叶原了。  
 “菲莉丝酱到底怎么了呢？”  
 “唉，搞不懂那家伙在想什么。”  
 这次我邀请了真由理同行，起因是菲莉丝莫名其妙的消息。  
